--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,6 +522,7 @@ a {
         width: 100%;
         background-color: #27282C;
         z-index: 1;
+        transition: 1s;
     }
     .nav li {
         display: flex;
@@ -531,8 +532,12 @@ a {
         margin: 10px 0;
     }
     .menu-toggle:focus + .nav, .menu-toggle:focus + .nav-socials {
-    display: block;
-}
+        display: block;
+    }
+
+    .nav:hover, .nav-socials:hover {
+        display: block;
+    }
 
     .nav-socials {
         order: -1;
