--- a/admin/css/admin_styles.css
+++ b/admin/css/admin_styles.css
@@ -118,7 +118,29 @@ body {
     transition: .2s;
 }
 
+.data-table td:last-child a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    font-size: 20px;
+    border: none;
+    background-color: transparent;
+    transition: .2s;
+    text-decoration: none;
+    color: #2f3640;
+}
+
+
 .data-table button:hover {
+    cursor: pointer;
+    color: white;
+    background-color: #00a8ff;
+}
+
+.data-table td:last-child:hover a {
     cursor: pointer;
     color: white;
     background-color: #00a8ff;
@@ -217,6 +239,181 @@ body {
     color: white;
     text-decoration: none;
 }
+
+.application {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.application > .state {
+    align-self: flex-end;
+    padding-bottom: 30px;
+    display: block;
+}
+
+.application > .state > #state {
+    font-weight: bold;
+}
+
+.application > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px 60px;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+}
+
+.application > div > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    
+    width: 350px;
+}
+
+.application > div > div > input {
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: 1px solid #2f3640;
+}
+
+.application > .user_message > textarea {
+    resize: none;
+    max-width: 760px;
+    width: 100%;
+    height: 150px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: 1px solid #2f3640;
+}
+
+.application .controll {
+    margin-bottom: 0px;
+}
+
+.application .controll input {
+    max-width: 760px;
+    width: 100%;
+    padding: 10px 15px;
+    border: none;
+    background: #2ecc71;
+    color: white;
+    transition: .2s;
+}
+
+.application .controll input:hover {
+    background: #27ae60;
+}
+
+.delete_appl .controll input {
+    background: #e74c3c;
+    transition: .2s;
+}
+
+.delete_appl .controll input:hover {
+    background: #c0392b;
+}
+
+.delete_appl .controll input:disabled {
+    background-color: #555555;
+}
+
+
+
+.socials-blocks {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.socials-blocks .social-block {
+    padding: 10px 15px;
+    border: 1px solid #2f3640;
+    border-radius: 5px;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px 30px;
+}
+
+.socials-blocks .social-block > div {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px 10px;
+    height: 100%;
+}
+
+.socials-blocks .social-block .icon-preview {
+    width: 85px;
+}
+
+.socials-blocks .social-block input {
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: 1px solid #2f3640;
+    display: block;
+}
+
+.socials-blocks .social-block input:disabled {
+    border-color: white;
+    background-color: white;
+}
+
+.socials-blocks .social-block button {
+    border-radius: 5px;
+    border: 1px solid #e74c3c;
+    background-color: white;
+    color: #e74c3c;
+    padding: 10px 10px;
+    transition: .2s;
+}
+
+.socials-blocks .social-block button:hover {
+    color: white;
+    background-color: #e74c3c;
+}
+
+.socials-blocks .add-social button {
+    border-radius: 5px;
+    border: 1px solid #2ecc71;
+    background-color: white;
+    color: #2ecc71;
+    padding: 10px 10px;
+    transition: .2s;
+}
+
+.socials-blocks .add-social button:hover {
+    color: white;
+    background-color: #2ecc71;
+}
+
+
+
+@media only screen and (max-width: 859px) {
+    .application > .user_message > textarea {
+        max-width: 350px;
+    }
+
+    .application .controll input {
+        max-width: 350px;
+    }
+
+    .delete_appl .controll input {
+        max-width: 350px;
+    }
+}
+
+
+
 
 @media only screen and (min-width: 1080px) {
     .menu-toggle {
