--- a/admin/css/admin_styles.css
+++ b/admin/css/admin_styles.css
@@ -328,7 +328,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: 60px;
 }
 
 .socials-blocks .social-block {
@@ -406,6 +405,18 @@ body {
 .socials-blocks .add-social button:hover {
     color: white;
     background-color: #2ecc71;
+}
+
+.content hr {
+    background-color: #2f3640;
+    border: 1px solid #2f3640;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.content h3 {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 
